[gd_scene load_steps=3 format=2]

[ext_resource path="res://Interface/Interface.gd" type="Script" id=1]
[ext_resource path="res://Interface/Sprites/ui_torch.png" type="Texture" id=2]

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TorchUI" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="TorchIcon" type="TextureRect" parent="TorchUI"]
margin_left = 221.472
margin_top = 492.141
margin_right = 237.472
margin_bottom = 508.141
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="TorchIndicator" type="ColorRect" parent="TorchUI"]
margin_left = 252.666
margin_top = 492.219
margin_right = 762.666
margin_bottom = 522.219
color = Color( 0.65098, 0.509804, 0.423529, 0.243137 )

[node name="ColorRect" type="ColorRect" parent="TorchUI/TorchIndicator"]
margin_left = 4.45935
margin_top = 5.13867
margin_right = 504.459
margin_bottom = 25.1387
color = Color( 1, 0.745098, 0.45098, 1 )

[node name="State" type="ColorRect" parent="."]
visible = false
margin_left = 24.0
margin_top = 50.0
margin_right = 201.0
margin_bottom = 150.0
color = Color( 0.227451, 0.227451, 0.227451, 0.439216 )

[node name="StateLabel" type="Label" parent="State"]
margin_left = 15.3698
margin_top = 10.0
margin_right = 53.3698
margin_bottom = 37.0
text = "State"
valign = 1

[node name="RetriesLabel" type="Label" parent="State"]
margin_left = 15.3698
margin_top = 37.0
margin_right = 53.3698
margin_bottom = 64.0
text = "Retries"
valign = 1

[node name="BeaconsLevel" type="Label" parent="State"]
margin_left = 15.3698
margin_top = 64.0
margin_right = 53.3698
margin_bottom = 91.0
text = "Beacons lit"
valign = 1
